# rl-qwen3

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cpu  FRAMEWORK.md  OPENROUTER_INTEGRATION.md  QUICKSTART.md  QUICKSTART_MAC.md  QUICKSTART_STANDALONE.md  QUICK_COMMANDS_OPENROUTER.sh  QUICK_REFERENCE.md  README.md  STANDALONE.md  docker-compose.yml  docker-run.sh  env.example  pyproject.toml  requirements.txt  test_framework.py  test_import.py  test_sb3_import.py
docs/: WANDB.md
examples/: benchmark_openrouter_example.py  people_search_agent_example.py  people_search_mcp_example.py  simple_math_agent.py
qwen3_agent/: __init__.py  benchmark.py  benchmark_cli.py  config.py  env.py  evaluation.py  local_model.py  rollout.py  tools.py  train.py  train_sb3.py
qwen3_agent/agents/: __init__.py
qwen3_agent/agents/email_agent/: __init__.py  agent.py  evaluator.py  tasks.py  tools.py
qwen3_agent/agents/people_search_agent/: OPENROUTER_USAGE.md  PROVIDERS.md  QUICKSTART.md  QUICK_COMMANDS.md  README.md  README_SIMPLE.md  SETUP_COMPLETE.md  __init__.py  agent.py  benchmark.py  cli.py  create_profile_db.py  create_training_db.py  data_loader.py  evaluator.py  filter_benchmark.py  flatten_benchmark.py  llm_provider.py  mcp_tools.py  setup_training_db.sh  tasks.py  test_cli.py  test_mcp.py  test_tools.py  test_training_db.py  tools.py  verify_setup.py
qwen3_agent/core/: __init__.py  gather.py  model.py  trajectories.py  types.py
qwen3_agent/core/framework/: __init__.py  agent.py  evaluator.py  llm_inference.py  rollout.py  task.py
qwen3_agent/data/: __init__.py  local_email_db.py  query_loader.py
qwen3_agent/utils/: __init__.py  iterate_dataset.py  limit_concurrency.py  litellm_utils.py
scripts/: benchmark.sh  benchmark_openrouter.sh  benchmark_people_search.sh  clean_train.sh  compare_models.sh  generate_database.sh  monitor_training.sh  people_search_cli.sh  quick_eval.sh  quick_train.sh  quick_train_sb3.sh  setup.sh  start_vllm.sh  train.sh  train_sb3.sh  train_with_rl.sh
