[project]
name = "qwen3-agent"
version = "0.1.0"
description = "Email search agent training with Qwen3 14B - Standalone version"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=3.4.1",
    "diskcache>=5.6.3",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "kaggle>=1.5.12",
    "langchain-core>=0.3.51",
    "mail-parser>=3.15.0",
    "matplotlib>=3.10.1",
    "openai>=1.0.0",
    "pandas>=1.3.0",
    "panza>=0.1.0",
    "pip>=25.0.1",
    "pydantic>=2.0.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "tabulate>=0.9.0",
    "tenacity>=8.0.0",
    "tiktoken>=0.9.0",
    "torch>=2.0.0",
    "tqdm>=4.62.0",
    "transformers>=4.50.3",
    "skypilot[runpod]>=0.8.1",
    "litellm>=1.65.0.post1",
    "ipywidgets>=8.1.6",
    "polars>=1.27.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qwen3_agent*"]

[dependency-groups]
dev = [
    "qwen3-agent",
]

